<resources>
    <!-- App name and Activity titles -->
    <string name="app_name">Skill Traderz</string>
    <string name="action_settings">Action Settings</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="title_activity_search_screen">SearchScreenActivity</string>
    <string name="title_activity_edit_trade">EditTradeActivity</string>

    <!-- String relating to the menus -->
    <string name="title_activity_general_menu">GeneralMenuActivity</string>
    <string name="go_home_menu">Home</string>
    <string name="go_profile">You</string>
    <string name="go_messages">Messages</string>
    <string name="go_make_skill">+ Skillz</string>
    <string name="go_to_settings">Settings</string>
    
    <!-- Strings related to Settings -->
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_username">Elyse </string>
    <string name="settings_usercity">City: </string>
    <string name="settings_usercontact">Contact Information: </string>
    <string name="settings_download_pics">Auto-download pictures</string>
    <string name="settings_save_changes">Save Changes</string>

    <!-- String relating to the First Time User layout -->
    <string name="make_a_user_name">Make a user name</string>
    <string name="what_is_your_email">What is your email?</string>
    <string name="welcome_to_app">Welcome to Skill Traderz!</string>
    <string name="begin_app">Begin!</string>

    <!-- String related to the Main Screen -->
    <string name="title_activity_main">MainActivity</string>
    <string name="search_field_text">Search Query</string>
    <string name="search_button">Search</string>
    <string name="browse_skillz">Browse Skillz</string>
    <string name="browse_users">Browse Users</string>
    <string name="your_profile">My Profile</string>
    <string name="your_inventory">My Inventory</string>
    <string name="your_friends">My Friendz</string>
    <string name="create_skill_menu">Create Skill</string>
    <string name="add_a_new_skill">Add a New Skill</string>

    <!-- Strings related to the Trade Request screen -->
    <string name="title_activity_trade_request">TradeRequest</string>
    <string name="trade_notes">Trade notes from trading partner</string>
    <string name="trading_with_xyz">Trading With XYZ</string>
    <string name="offering">Offer:</string>
    <string name="requesting">Request:</string>
    <string name="offer_inv">Your Inventory:</string>
    <string name="request_inv">Other Guy\'s Inventory:</string>
    <string name="accept_trade">Accept Trade</string>
    <string name="send_trade">Send Trade</string>
    <string name="counter_trade">Counter Offer</string>
    <string name="delete_trade">Delete Request</string>
    <string name="note_for_trade">Describe your request!</string>
    <string name="desc">Description:</string>
    <string name="trade_history">Trade History</string>

    <!-- String related to the Profile layout -->
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="user_name">User Name</string>
    <string name="add_friend">Add Friend</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="friend_List">Friends</string>
    <string name="user_description">User contact information</string>
    <string name="user_inventory">User Inventory</string>
    <string name="make_trade">Start Trade</string>

    <!-- Strings related to the Inventory layout -->
    <string name="title_activity_inventory">InventoryActivity</string>
    <string name="refine_search">Refine Search</string>

    <!-- String related to making or editing a skill -->
    <string name="title_activity_edit_skill">EditSkill</string>
    <string name="title_activity_skill_description">SkillDescription</string>
    <string name="skill_title">Skill Title</string>
    <string name="skill_category">Miscellaneous</string>
    <string name="skill_description">Skill Description</string>
    <string name="add_skill">Add Skill</string>
    <string name="edit_skill">Edit</string>
    <string name="new_skill_name">What do you want to name your skill?</string>
    <string name="new_skill_description">Describe your new skill</string>
    <string name="new_skill_category">What category of skill is your new skill</string>
    <string name="is_visible">Visible</string>
    <string name="auto_img">Automatic Image Downloads</string>
    <string name="edit_email_button">Edit Contact</string>
    <string name="name">Name:</string>
    <string name="photo_alt">Take Photo</string>
    <string name="img">img</string>
    <string name="retake">Retake</string>
    <string name="remove">Remove</string>

    <!-- Categories -->
    <string-array name="category_spinner_strings">
        <item>Creative</item>
        <item>Communication</item>
        <item>Electronics and Computers</item>
        <item>Household</item>
        <item>Math and Science</item>
        <item>Building and Fixing</item>
        <item>Miscellaneous</item>
        <item>Parenting</item>
        <item>Physical</item>
        <item>Stealth and Pranks</item>
    </string-array>

    <!-- Categories All -->
    <string-array name="category_All">
        <item>All</item>
        <item>Creative</item>
        <item>Communication</item>
        <item>Electronics and Computers</item>
        <item>Household</item>
        <item>Math and Science</item>
        <item>Building and Fixing</item>
        <item>Miscellaneous</item>
        <item>Parenting</item>
        <item>Physical</item>
        <item>Stealth and Pranks</item>
    </string-array>

    <!-- Categories (Users) -->
    <string-array name="friends_All">
        <item>All</item>
        <item>Friends</item>
        <item>Non-Friends</item>
    </string-array>

    <!-- Categories (Trades) -->
    <string-array name="trades_All">
        <item>All</item>
        <item>In-Progress</item>
        <item>Complete</item>
    </string-array>

    <!-- Sorting (Everything) -->
    <string-array name="sort">
        <item>Name</item>
        <item>Category</item>
        <item>Top Trader</item>
    </string-array>

    <!-- Strings for Image viewer -->
    <string name="title_activity_image_viewer">ImageViewerActivity</string>
    <string name="counterTrade">Counter Request</string>
    <string name="category">Category</string>
    <string name="Name">Name</string>
    <string name="accept">Accept</string>
    <string name="rating">Quality Of Skill:</string>
    <string name="category_title">Category:</string>
    <string name="good">Good</string>
    <string name="recentActs">Recent Activities</string>
</resources>
