<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.skilltradiez.skilltraderz.ProfileActivity">

    <View android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/iconshape"
        android:id="@+id/user_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#057777"
        android:text="@string/user_name"
        android:id="@+id/user_name"
        android:layout_alignTop="@+id/user_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_friend"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="#629595"
        android:textColor="#ffffff"
        android:id="@+id/add_friend"
        android:layout_alignBottom="@+id/user_name"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/user_name"
        android:onClick="addRemoveFriend"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user_description"
        android:id="@+id/user_description"
        android:layout_below="@+id/user_icon"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:layout_alignEnd="@+id/add_friend"
        android:layout_above="@+id/inventory" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_inventory"
        android:background="@drawable/button_with_border"
        android:id="@+id/inventory"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="126dp"
        android:layout_alignEnd="@+id/user_description"
        android:onClick="checkInventory"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_trade"
        android:background="@drawable/button_with_border"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:id="@+id/maketrade"
        android:onClick="startTrade"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friend_List"
        android:id="@+id/friend_list_button"
        android:background="@drawable/button_with_border"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/maketrade"
        android:layout_alignEnd="@+id/user_name" />


</RelativeLayout>
