<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.skilltradiez.skilltraderz.EditSkill">

    <EditText
        android:id="@+id/new_skill_name"
        android:textColor="#057777"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/new_skill_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/new_skill_description"
        android:textColor="#057777"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/new_skill_name"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:hint="@string/new_skill_description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/new_category"
        android:textColor="#057777"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_above="@+id/add_skill_to_database"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:hint="@string/new_skill_category"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/add_skill_to_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/add_skill"
        android:onClick="addSkill"/>
</RelativeLayout>
