<?xml version="1.0" encoding="utf-8"?>
<!--
    *    Team15Alpha
    *    AppName: SkillTradiez (Subject to change)
    *    Copyright (C) 2015  Stephen Andersen, Falon Scheers, Elyse Hill, Noah Weninger, Cole Evans
    *
    *    This program is free software: you can redistribute it and/or modify
    *    it under the terms of the GNU General Public License as published by
    *    the Free Software Foundation, either version 3 of the License, or
    *    (at your option) any later version.
    *
    *    This program is distributed in the hope that it will be useful,
    *    but WITHOUT ANY WARRANTY; without even the implied warranty of
    *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    *    GNU General Public License for more details.
    *
    *    You should have received a copy of the GNU General Public License
    *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.skilltradiez.skilltraderz.EditTradeActivity">

    <TextView
        android:id="@+id/trading_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/trading_with_xyz"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#057777" />

    <TextView
        android:id="@+id/offering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/trading_with"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/trading_with"
        android:layout_marginTop="28dp"
        android:text="@string/offering"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#057777" />

    <ListView
        android:id="@+id/skillListInTrade"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/offering"
        android:layout_marginTop="27dp"
        android:background="@drawable/button_with_border" />

    <EditText
        android:id="@+id/trade_description"
        android:inputType="textMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="@drawable/button_with_border"
        android:hint="@string/note_for_trade"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@+id/deleteTrade"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/addSkillToTrade" />

    <Button
        android:id="@+id/sendTrade"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/send_trade"
        android:onClick="sendTrade"/>

    <Button
        android:id="@+id/addSkillToTrade"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_new_skill"
        android:onClick="addSkillToTrade"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/sendTrade" />

    <Button
        android:id="@+id/deleteTrade"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/addSkillToTrade"
        android:layout_alignParentStart="true"
        android:text="@string/delete_trade"
        android:onClick="deleteRequest"/>

</RelativeLayout>
