<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.skilltradiez.skilltraderz.FirstTimeUserActivity">

    <TextView
        android:layout_width="wrap_content"
        android:textColor="#057777"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_to_app"
        android:id="@+id/welcomeMessage"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/make_a_user_name"
        android:id="@+id/makeUserName"
        android:layout_above="@+id/whatIsYourEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="63dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/what_is_your_email"
        android:id="@+id/whatIsYourEmail"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
