<?xml version="1.0" encoding="utf-8"?>
<!--
    *    Team15Alpha
    *    AppName: SkillTradiez (Subject to change)
    *    Copyright (C) 2015  Stephen Andersen, Falon Scheers, Elyse Hill, Noah Weninger, Cole Evans
    *
    *    This program is free software: you can redistribute it and/or modify
    *    it under the terms of the GNU General Public License as published by
    *    the Free Software Foundation, either version 3 of the License, or
    *    (at your option) any later version.
    *
    *    This program is distributed in the hope that it will be useful,
    *    but WITHOUT ANY WARRANTY; without even the implied warranty of
    *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    *    GNU General Public License for more details.
    *
    *    You should have received a copy of the GNU General Public License
    *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.skilltradiez.skilltraderz.MainActivity"
    android:id="@+id/s">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/sz_circle"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/browse_skillz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_with_border"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/browse_skillz"
        android:onClick="beginAllSearch"
        android:layout_above="@+id/imageView"
        android:layout_alignEnd="@+id/trade_history"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/browse_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_with_border"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/browse_users"
        android:onClick="beginAllSearch"
        android:layout_above="@+id/imageView"
        android:layout_alignEnd="@+id/add_a_new_skill" />

    <Button
        android:id="@+id/go_to_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/browse_users"
        android:layout_alignStart="@+id/browse_users"
        android:layout_below="@+id/browse_users"
        android:layout_marginTop="37dp"
        android:background="@drawable/button_with_border"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/your_profile"
        android:onClick="showProfile"/>

    <Button
        android:id="@+id/add_a_new_skill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_with_border"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/add_a_new_skill"
        android:onClick="createNewSkill"
        android:layout_alignTop="@+id/go_to_profile"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/trade_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_with_border"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/trade_history"
        android:onClick="beginAllSearch"
        android:singleLine="false"
        android:layout_alignTop="@+id/add_a_new_skill"
        android:layout_alignParentStart="true" />
</RelativeLayout>
