<?xml version="1.0" encoding="utf-8"?>
<!--
    *    Team15Alpha
    *    AppName: SkillTradiez (Subject to change)
    *    Copyright (C) 2015  Stephen Andersen, Falon Scheers, Elyse Hill, Noah Weninger, Cole Evans
    *
    *    This program is free software: you can redistribute it and/or modify
    *    it under the terms of the GNU General Public License as published by
    *    the Free Software Foundation, either version 3 of the License, or
    *    (at your option) any later version.
    *
    *    This program is distributed in the hope that it will be useful,
    *    but WITHOUT ANY WARRANTY; without even the implied warranty of
    *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    *    GNU General Public License for more details.
    *
    *    You should have received a copy of the GNU General Public License
    *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.skilltradiez.skilltraderz.SkillDescription">

    <TextView
        android:id="@+id/skillTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/skill_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#057777" />

    <TextView
        android:id="@+id/skillCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skill_category"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#057777"
        android:layout_below="@+id/skillTitle"
        android:layout_alignParentStart="true" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:id="@+id/horizontalScrollView2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/skillCategory"
        android:background="@drawable/button_with_border"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/skill_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_with_border"
        android:inputType="textMultiLine"
        android:text="@string/skill_description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/horizontalScrollView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/add_remove_skill" />

    <Button
        android:id="@+id/add_remove_skill"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/skill_description"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_with_border"
        android:onClick="addRemoveSkill"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/add_skill"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/ratingBar2" />

    <Button
        android:id="@+id/edit_skill"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/button_with_border"
        android:text="@string/edit_skill"
        android:visibility="invisible"
        android:onClick="editSkill"/>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView"
        android:layout_below="@+id/add_remove_skill"
        android:layout_alignParentStart="true" />

    <RatingBar
        style="@style/skillzRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar2"
        android:rating="0"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
